@@ -274,12 +274,16 @@ Lines are highlighted green for executed, red for missing, and gray for
 excluded.  The counts at the top of the file are buttons to turn on and off
 the highlighting.
 
-If you prefer a different style for your HTML report, you can provide your
-own CSS file to apply, by specifying a CSS file in the [html] section of the
-configuration file.  See :ref:`config_html` for details.
-
 A number of keyboard shortcuts are available for navigating the report.
 Click the keyboard icon in the upper right to see the complete list.
+
+The title of the report can be set with the ``title`` setting in the
+``[html]`` section of the configuration file, or the ``--title`` switch on
+the command line.
+
+If you prefer a different style for your HTML report, you can provide your
+own CSS file to apply, by specifying a CSS file in the ``[html]`` section of
+the configuration file.  See :ref:`config_html` for details.
 
 The ``-d`` argument specifies an output directory, defaulting to "htmlcov"::
 
